add spotify palyer daemon

--- a/hypr/.config/hypr/configs/autostart.conf
+++ b/hypr/.config/hypr/configs/autostart.conf
@@ -6,5 +6,5 @@
 # Or execute your favorite apps at launch like this:
 
 exec-once = hypridle &
-exec-once = swww-daemon & wal -R
+exec-once = swww-daemon & wal -R & spotify_palyer -d &
 exec-once = waybar & $terminal & $browser
