added media player support to waybar

--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -28,6 +28,7 @@
 
     //modules right
     "modules-right": [
+        "custom/spotify",
         "custom/weather",
         "pulseaudio",
         "network",
