add exit hotkey to hyprland

--- a/hypr/.config/hypr/configs/keybinds.conf
+++ b/hypr/.config/hypr/configs/keybinds.conf
@@ -30,6 +30,9 @@ bind = $mainMod, W, exec, ~/.config/hypr/scripts/wallpaper.sh
 # wlogout
 bind = $mainMod, M, exec, wlogout -b 2
 
+# exit hyprland
+bind = $mainMod SHIFT, M, exit
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
