FIXED lockscreen wallpaper

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -15,7 +15,7 @@ general {
 
 background {
     monitor =
-    path = ~/wallpapers/current_wallpaper_blurred.png
+    path = ~/wallpaper/current_wallpaper_blurred.jpg
     blur_passes = 0
 }
 
